--- a/WideOpenSite.css
+++ b/WideOpenSite.css
@@ -6,18 +6,19 @@
   box-sizing: border-box;
 }
 
-
 .navbar-inverse .navbar-nav>li>a {
     color: white;
 }
 
-
 .jumbotron{
-  background: url(http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-masthead-dark.jpg);
+  /*background: url(http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-masthead-dark.jpg);*/
+  background:url(https://source.unsplash.com/random);
   background-size: cover;
   /*background-position: center;*/
   width: 100%;
   height: 700px;
+  margin-bottom: 0;
+
 }
 
 .navbar-inverse {
@@ -52,7 +53,6 @@
 .digital{
   border: 2px solid red;
   letter-spacing: .7px;
-
 }
 
 p.workshop{
@@ -62,3 +62,136 @@ p.workshop{
   font-size: 7vw;
   letter-spacing: 1px;
 }
+
+.containerTool{
+  background-color: #F0F0F0;
+  font-family: 'Oswald';
+  color: #728488;
+}
+
+
+.tool{
+
+    font-weight: 500;
+    color: #F0F0F0;
+    width: 100%;
+    border: 1px solid red;
+    margin-top: 0;
+}
+.twhite{
+  color: #728488;
+  font-family: 'Oswald';
+  border: 1px solid red;
+  margin-bottom: 40px;      //
+
+}
+.tool p {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 0px;
+    color: #728488;
+    padding-top: 30px;
+}
+
+.col_container3{
+  width: 100%;
+  display: flex;
+  /*border: 2px solid red;*/
+  flex-wrap: wrap;
+  font-family: 'Oswald';
+}
+
+.sprite{
+  flex: 1;
+  border: 1px solid red;
+}
+
+.sprite3{
+  padding-bottom: 1em;
+}
+
+.col_Learn3{
+
+  margin-top: 10px;
+  text-decoration: none;
+  color: #bdd436 !important;
+}
+
+.link-arrow {
+    height: 30px;
+    width: 27px;
+    background: url(sprite_home.png);
+    content: " ";
+    display: block;
+    background-position: -46px -292px;
+    margin: 20px auto;
+  }
+
+  .howHelp{
+    font-family: 'Oswald';
+    color: #3B737A;
+    border: 2px solid red;
+    margin: 5px 0 70px;
+    background-color: #F2F2F2;
+    margin-top: 0;
+  }
+
+  .help{
+    color:#B8E233;
+  }
+
+  .container_flex5{
+    width: 80%;
+    border: 1px solid red;
+    margin: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+
+  }
+
+  .Col_flex5{
+    flex: 2;
+    border: 1px solid red;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    min-width: 200px;
+
+     /*make it fall under each other */
+  }
+
+  .second-a{
+    background-color: pink;
+
+
+    flex: 1
+
+  }
+
+  .second-b{
+    background-color: green;
+    flex: 1;
+
+  }
+
+  .second-c{
+    background-color: cyan;
+    flex: 1;
+  }
+
+  .col_FlexSecond{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .other-a{
+    flex: 1;
+    background-color: pink;
+  }
+
+  .other-b{
+    flex: 1;
+    background-color: green;
+  }
